sp6: Реализовать историю просмотров.